2002-02-28  Zbigniew Chyla  <cyba@gnome.pl>

	* capplet-dir.c (capplet_new, capplet_dir_new):
	s/gnome_desktop_item_get_string/gnome_desktop_item_get_localestring
	(use translated version of GNOME_DESKTOP_ITEM_NAME).

2002-02-27  Kjartan Maraas  <kmaraas@gnome.org>

	* main.c: s/PACKAGE/GETTEXT_PACKAGE/g
	
2002-02-20  Lauris Kaplinski  <lauris@ximian.com>

	* Makefile.am: Removed extra '\' from the end of
	commented out line, which was causing problems with
	some make/autoconf/automake combinations

2002-02-14  Lauris Kaplinski  <lauris@ximian.com>

	* preferences.c (gnomecc_preferences_get): Public method to
	get pointer of static preferences object

	* main.c (gnome_cc_save_yourself): Session signal handler
	(gnome_cc_die): Ditto
	(main): Get client and connect session manager signals

	* capplet-dir-view.c (capplet_dir_view_new): Get prefs pointer
	via public method
	(get_capplet_dir_view): Ditto
	(gnomecc_init): Ditto

	* capplet-dir-view-tree.c: Remove #undef GTK_DISABLE_DEPRECATED,
	so if included again we see warnings

	* capplet-dir.c: Remove <bonobo.h> which was unused

	* main.c: Remove <bonobo.h> which was unused

	* preferences.c (read_preferences): Remove LAYOUT_TREE
	(place_preferences): Ditto

	* preferences.h: Remove LAYOUT_TREE from preferences

	* capplet-dir-view.c: Removed capplet_dir_view_tree
	(capplet_dir_view_set_prop): Ditto

	* Makefile.am: Remove capplet-dir-view-tree from SOURCES

2002-02-12  Lauris Kaplinski  <lauris@ximian.com>

	* preferences.c (prefs_dialog_ok_cb): Destroy widget instead of
	gnome_dialog_close
	(prefs_dialog_cancel_cb): Ditto
	(prefs_dialog_response): Common button click handler
	(gnomecc_preferences_get_config_dialog): Connect GtkDialog 'response' signal

	* capplet-dir-view.c (capplet_dir_view_load_dir): Replace deprecated methods,
	use gdk_pixbuf/gtk_image instead of gnome_pixmap
	(prefs_changed_cb): Use g_object_set
	(option_menu_activate): Use g_object_set_data
