@@ -1,4 +1,4 @@
-appicondir = $(datadir)/control-center-2/icons
+appicondir = $(GNOMECC_ICONS_DIR)
 appicon_DATA = control-center.png
 
 splashdir = $(datadir)/pixmaps/gnomecc-2
@@ -13,7 +13,7 @@ sys_in_files = gnomecc.desktop.in
 sys_DATA = $(sys_in_files:.desktop.in=.desktop)
 @INTLTOOL_DESKTOP_RULE@
 
-gladedir = $(datadir)/control-center-2/interfaces
+gladedir = $(GNOMECC_GLADE_DIR)
 glade_DATA = \
 	gnomecc.glade	\
 	gnome-lockscreen.png	\
@@ -24,13 +24,11 @@ glade_DATA = \
 
 INCLUDES = 							\
 	-DGNOMELOCALEDIR=\""$(datadir)/locale"\" 		\
-	-DGLADEDIR=\""$(datadir)/control-center-2/interfaces"\"	\
-	-DVERSION=\""$(VERSION)"\"				\
-	-DSETTINGS_DIR=\""$(datadir)/control-center-2/capplets"\"	\
+	-DGLADEDIR=\""$(gladedir)"\"	\
+	-DSETTINGS_DIR=\""$(GNOMECC_DESKTOP_DIR)"\"	\
 	-DPIXMAPS_DIR=\""$(appicondir)"\"			\
 	-DART_DIR=\""$(splashdir)"\"				\
 	-DGNOME_SBINDIR=\""$(sbindir)"\"			\
-	-I/gnome/head/INSTALL/include/gnome-desktop-2.0	\
 	@GNOMECC_CFLAGS@	
 
 bin_PROGRAMS = gnome2-control-center
@@ -44,12 +42,8 @@ gnome2_control_center_SOURCES = \
 
 #	capplet-dir-view-tree.c
 
-gnome2_control_center_LDADD = \
-	@GNOMECC_LIBS@ \
-	-lgnome-desktop-2
+gnome2_control_center_LDADD = $(GNOMECC_LIBS)
 
 EXTRA_DIST = gnomecc.desktop.in $(appicon_DATA) $(splash_DATA) $(glade_DATA)
-
-paneldir        = $(datadir)/gnome/apps/Settings
 
 CLEANFILES=gnomecc.desktop
