@@ -1,3 +1,8 @@
+2002-03-05  jacob berkman  <jacob@ximian.com>
+
+	* Makefile.am: clean up; remove some duplicate / obsolete paths
+	and bogus INCLUDE path
+
 2002-02-28  Zbigniew Chyla  <cyba@gnome.pl>
 
 	* capplet-dir.c (capplet_new, capplet_dir_new):
